[metadata]
name = proliantutils
summary = Client Library for interfacing with various 
    devices in HP Proliant Servers.
description-file =
    README.rst
license = Apache License, Version 2.0
author = Hewlett Packard
author-email = proliantutils@gmail.com
home-page = https://github.com/hpproliant/proliantutils
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    proliantutils

[entry_points]
ironic_python_agent.hardware_managers =
    hp-proliant = proliantutils.hpproliant_hardware_manager.hardware_manager:HPProliantHardwareManager

